 - [DEV-262] added group filtering  for "Trigger info" (Artem)
 - [DEV-259] added internal links (Artem)
 - [DEV-251] added improved screen editing (Artem)
 - [DEV-249] added support of advanced regular expressions (Artem,Sasha)
 - [DEV-247] added enhancement to the Graph function (Artem)
 - [DEV-233,DEV-237] added support of scheduled maintenance periods (Artem,Sasha)

Changes for 1.6.3

 - [ZBX-776] changed disabled auto-logout indication (amach)
 - [ZBX-784] added extension to hosts when importing graph to template (Artem)
 - [ZBX-774] display correct error message if file import fails (Vedmak)
 - [ZBX-777] default autologout time is set to 900 (Vedmak)
 - [DEV-268] added support of vfs.dev.read/write under FreeBSD (Sasha)
 - [ZBX-448] fixed zabbix server status when frontend and backend are on different servers (Vedmak)
 - [ZBX-660] fixed screen clock set to server time showed local time (Artem)
 - [ZBX-603] fixed min autologout value to 90 seconds (amach)
 - [ZBX-762] improved performance of processing of log and text items (Sasha)
 - [ZBX-749] details box is open by default if any error occured (Vedmak)
 - [ZBX-751] expanded details box added for triggers copying messages (Vedmak)
 - [DEV-268] added support of <mode> for system.cpu.util under Solaris (Sasha)
 - [ZBX-737] the behaviour of the agent's key "vfs.fs.size" improved to be similar to the "df" command (Dmitry)
 - [ZBX-599] the purpose of the configuration parameter StartAgents precised (Dmitry)
 - [ZBX-756] added tooltip in "status of ZABBIX" report for number of items and triggers parameter (Vedmak)
 - [ZBX-740] fixed wrong aggregate graph drawing (Artem)
 - [ZBX-747] fixed template linkage not working properly (Vedmak)
 - [ZBX-746] fixed incorrect processing of net.tcp.listen (Sasha)
 - [ZBX-745] fixed "invalid URL" when use small popup menus like ping etc (Vedmak)
 - [ZBX-744] fixed "invalid URL" when add user to user group (Vedmak)